@@ -15,6 +15,7 @@ jedit-20211103
 jfreechart-1.5.3
 jortho-1.0-2
 kodkodi-1.5.7
+lipics-3.1.2
 minisat-2.2.1-1
 mlton-20210117-1
 nunchaku-0.5
