@@ -7,6 +7,13 @@ Isabelle NEWS -- history of user-relevant changes
 New in this Isabelle version
 ----------------------------
 
+*** Document preparation ***
+
+* The Dagstuhl LIPIcs style is included as Isabelle component. The
+session "Demo_LIPIcs" provides an example document, which is also
+included in the regular Isabelle documentation as "demo_lipics".
+
+
 *** HOL ***
 
 * Theory "HOL.Fun":
